Add document upload and knowledge base management functionality